<resources>
    <string name="app_name">UOSwheelchair1</string>
    <string name="CNIC">CNIC</string>
    <string name="Address">Enter Full Address</string>
    <string name="Phone_NO">Phone Number</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="gender">Gender</string>
    <string name="MALE">Male</string>
    <string name="FEMALE">Female</string>
    <string name="loginImgDescription"></string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="RegisterHere">Register Here</string>
    <string name="LoginHere">Login Here</string>
    <string name="new_applicant">New Applicant</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="smart_e_wheelchair">Smart Electronics Wheelchair</string>
    <string name="submit">Submit</string>
    <string name="how_many_days_you_need">How many days you need?</string>
    <string name="permanant_address">Permanant Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="get_paired_devices">Get Paired Devices</string>
    <string name="discoverable">Discoverable</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="nill">nill</string>
    <string name="functionality">functionality</string>
    <string name="already_register">Already Register</string>
    <string name="left">left</string>
    <string name="top">Forward</string>
    <string name="right">Right</string>
    <string name="bottom">Backward</string>
</resources>
