<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".functional_page">


    <Button
        android:layout_width="120dp"
        android:layout_height="88dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:onClick="TOP"
        android:text="@string/top"
        android:textColor="@color/textcolorwhite"
        android:textSize="22sp" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="100dp"
        android:onClick="left"
        android:background="@drawable/rounded_button"
        android:text="@string/left"
        android:textColor="@color/textcolorwhite"
        android:textSize="22sp" />


    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="Right"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_button"
        android:text="@string/right"
        android:layout_marginLeft="150dp"
        android:textColor="@color/textcolorwhite"
        android:textSize="22sp" />
</LinearLayout>
    <Button
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:onClick="Bottom"
        android:layout_marginLeft="120dp"
        android:text="@string/bottom"
        android:textColor="@color/textcolorwhite"
        android:textSize="22sp" />

</LinearLayout>