<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Signup_form">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/textcolor">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textSize="22sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/textcolor">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textSize="22sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/textcolor">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Email"
            android:inputType="textWebEmailAddress"
            android:textSize="22sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/textcolor">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="22sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/buttoncolor"
        android:layout_gravity="center"
        android:text="@string/Register"
        android:onClick="Register"
        android:textColor="@color/textcolor"
        android:textSize="22sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center"
        android:onClick="btn_loginForm"
        android:text="@string/LoginHere"
        android:textColor="@color/textcolor"
        android:textSize="22sp" />


</LinearLayout>