<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".afterloginPage">


    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="submit_Application"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:text="@string/new_applicant"
        android:textColor="@color/textcolorwhite"
        android:textSize="22sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/already_register"
        android:textColor="@color/textcolorwhite"
        android:textSize="22sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="function_Application"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:text="@string/functionality"
        android:textColor="@color/textcolorwhite"
        android:textSize="22sp" />


</LinearLayout>